# vuetemplate

./: README.md  package-lock.json  package.json  vite.config.js
src/: App.vue  main.js  router.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: bug_update_page.php.html  enums.rs  lib.rs  main.rs  model.rs  my_view_page.php.html  utils.rs  view.php.html  view_all_set copy.html
src-tauri/src/badge/: linux_badge.rs  macos_badge.rs  mod.rs  windows_badge.rs
src-tauri/src/example/: bug_change_status_page.php  bug_change_status_page.php.html  bug_report_page.html  bug_report_page.php  bug_update_page.php.html  category.html  test.html  view.php.html  view_all_set.html
src/api/: index.js  request.js
src/components/: AddBug.vue  Annotation.vue  BugDetails.vue  BugInfos.vue  BugList.vue  ContentArea.vue  HorizontalMenu.vue  Image.vue  ImageNotes.vue  OperationCard.vue  SettingsDialog.vue  Sidebar.vue  Subscribe.vue  TopMenu.vue  Update.vue  UpdateNotification.vue
src/components/panels/: ChatPanel.vue  ContactsFilesPanel.vue  ListPanel.vue  Subscribe.vue  SubscribePanel.vue
src/components/settings/: AboutPanel.vue  AccountSettingsPanel.vue  FileSettingsPanel.vue  GeneralSettingsPanel.vue  PluginSettingsPanel.vue  ShortcutSettingsPanel.vue
src/router/: router.js
src/store/: index.js
src/util/: index.js
src/view/: Demo.vue  Home.vue  Login.vue
src/views/: ContentArea.vue  Home.vue  Login.vue  SettingsDialog.vue  Sidebar.vue  TimeTrans.vue
src/views/panels/: AddBug.vue  (+4 more)
src/windows/: index.js
~/.tauri/: myapp.key  myapp.key.pub
(+6 files in other folders)
